r726 | gaser | 2015-09-14 11:16:12

M       CHANGES.txt
M       cg_vbm_opts.m
M       cg_vbm_run.m
M       cg_vbm_write.m
M       tbx_cfg_vbm.m

(1) Removed options for SPM12 bias correction form GUI.
(2) Adapted some fucntions according to (1).
(3) pause(rand) did not work properly, now always pause(1) is used in 
    cg_vbm_write.m
------------------------------------------------------------------------
r727 | gaser | 2015-09-14 14:55:31

M       CHANGES.txt
A  +    templates_surfaces/lh.central.freesurfer.gii
D       templates_surfaces/lh.central.gii
A  +    templates_surfaces/lh.sphere.freesurfer.gii
D       templates_surfaces/lh.sphere.gii
A  +    templates_surfaces/rh.central.freesurfer.gii
D       templates_surfaces/rh.central.gii
A  +    templates_surfaces/rh.sphere.freesurfer.gii
D       templates_surfaces/rh.sphere.gii
M       vbm_spm.m
M       vbm_surf_avg.m
M       vbm_surf_createCS.m
M       vbm_surf_resamp.m
M       vbm_surf_resamp_freesurfer.m
M       vbm_surf_resample.m

Renamed ?h.sphere.gii and ?h.central.gii to ?h.central.freesurfer.gii
and ?h.sphere.freesurfer.gii and changed resp. files.

------------------------------------------------------------------------
r728 | gaser | 2015-09-14 15:28:55

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_stools.m

(1) Added expert modus 2 for experimental functions.
(2) Changed some file selection settings according to expert modus.

------------------------------------------------------------------------
r729 | gaser | 2015-09-14 15:44:30

M       CHANGES.txt
M       cg_vbm_batch.sh
M       cg_vbm_tools.m
M       cg_vbm_write.m
M       vbm_vol_groupwise_ls.m
M       vbm_vol_sanlm.m
M       vbm_vol_series_align.m

(1) Removed vbm-dir option in cg_vbm_batch.sh and updated help test.
(2) Some cosmetic changes to cg_vbm_write.m, vbm_vol_sanlm.m
    vbm_vol_groupwise_ls.m, and cg_vbm_tools.m
------------------------------------------------------------------------
r730 | gaser | 2015-09-16 11:34:37